# chronicler-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hello.py  pyproject.toml
src/chronicler_backend/: main.py  query.py  schema.py
tests/: conftest.py
tests/small/: test_query.py
